Listen for mqtt messages

--- a/gate-opener/package.json
+++ b/gate-opener/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "await-exec": "^0.1.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mqtt": "^4.2.8"
   }
 }
